src/components/Contact.module.css
.label {
	display: block;
}

.input,
.textarea {
	width: 100%;
	margin-bottom: 20px;
	padding: 10px;
}

.button {
	background: var(--lightBlue);
	border: none;
	padding-left: 15px;
	padding-right: 15px;
	padding-top: 10px;
	padding-bottom: 10px;
	font-weight: bold;
	vertical-align: bottom;
}

